# ml-projects

./: README.md
digit recognizer/: README.MD  digitrecog.py
poker/: README.md
poker/Poker/: Poker.notation  Poker.uml  README.txt
poker/Poker_CDTProject/: .cproject  .project
poker/Poker_CDTProject/Debug/: makefile
poker/Poker_CDTProject/Debug/src/: subdir.mk
poker/Poker_CDTProject/src/: CMakeLists.txt  Dealer.cc  Dealer.hh  Input.cc  Input.hh  MakefileTop.mk  Play.cc  Play.hh  Player.cc  Player.hh  Tick.cc  Tick.hh  Top.cc  Top.hh  TopControllers.cc  TopControllers.hh  TopMain
stock prediction/: lstm1.py  stockpredictor1.py
swc-queens-nov2017/: .RData  .Rhistory  R Bash Workshop.docx  README.MD
swc-queens-nov2017/.Rproj.user/748F4F26/pcs/: files-pane.pper  windowlayoutstate.pper
swc-queens-nov2017/.Rproj.user/748F4F26/sources/prop/: 4A393C5  INDEX
swc-queens-nov2017/.Rproj.user/748F4F26/sources/s-AF5F7CA0/: 3A402E5  3A402E5-contents  5CB42161  5CB42161-contents  6BD790A9  6BD790A9-contents
swc-queens-nov2017/.Rproj.user/shared/notebooks/: paths
